RESOLVED FIXED235868
[LFC][IFC] Do not break content at an inline box boundary
https://bugs.webkit.org/show_bug.cgi?id=235868
Summary [LFC][IFC] Do not break content at an inline box boundary
alan
Reported 2022-01-29 21:03:50 PST
ssia
Attachments
Patch (5.20 KB, patch)
2022-01-29 21:15 PST, alan
no flags
alan
Comment 1 2022-01-29 21:15:09 PST
EWS
Comment 2 2022-01-30 07:59:57 PST
Committed r288800 (246576@main): <https://commits.webkit.org/246576@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450348 [details].
Radar WebKit Bug Importer
Comment 3 2022-01-30 08:00:19 PST
Note You need to log in before you can comment on or make changes to this bug.